--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
                 <artifactId>spring-cloud-commons</artifactId>
                 <version>2.0.4.RELEASE</version>
             </dependency>
+            <!--thrift-->
+            <dependency>
+                <groupId>org.apache.thrift</groupId>
+                <artifactId>libthrift</artifactId>
+                <version>0.11.0</version>
+            </dependency>
             <!-- zookeeper -->
             <dependency>
                 <groupId>org.apache.zookeeper</groupId>
