--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,6 @@
     <artifactId>spring-boot-starter-thrift</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
-    </parent>
     <description>SpringBoot Thrift Starter</description>
     <modules>
         <module>spring-boot-starter-thrift-server</module>
@@ -49,7 +44,7 @@
             <dependency>
                 <groupId>org.apache.thrift</groupId>
                 <artifactId>libthrift</artifactId>
-                <version>0.11.0</version>
+                <version>0.12.0</version>
             </dependency>
             <!-- zookeeper -->
             <dependency>
@@ -100,6 +95,11 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.18.10</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.9</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
